1-2. Installation